2005-10-11  John Sullivan  <johns@fsf.org>

	* delicioapi.el (delicious-api-register-auth): url-version "Emacs"
	requires url-http to be loaded for basic auth to work. 

2005-10-10  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-search-delete): Look up the post's
	actual url, instead of just copying it from the search results
	buffer. Deleting from the search results buffer should actually
	work now.
	(delicious-update-timestamp): Put the timestamp on its own line in
	the posts file, easier not to accidentally include it in a post
	that way.
	(delicious-search-insert-match): Insert a space if the field is
	empty. This way, the 'e' binding and other text properties will
	work on a blank extended description field.
	(delicious-search-next-result): Improved TAB behavior in the
	search results buffer. Previously it just wrapped to the beginning
	of the buffer when the user was on the last post, but did not
	actually go to the first post in the buffer. Now it does.

	* delicioapi.el (delicious-api-post): Fix bugs with hexifying the
	URL that were causing duplicate posts and stopping the editing
	functions in search mode from working right.

	* delicious.el (delicious-read-extended-description): The server
	accepts a maximum of 253 characters for the extended
	description. Check to see if the input is longer than that,
	suggest a truncation if it is.
	(delicious-skip-timestamp): Account for the possibility of being
	offline. Previously, if the posts file was empty, and you tried to
	delicious-post-offline, we'd get confused and try to contact the
	server.
	(delicious-search-buffer-prep): If we're already in the search
	results buffer, clear it before doing a new search.
	(delicious-search-edit-extended): New command to edit the extended
	description of a post. Just type 'e' when over the extended
	description of a post in the delicious search results buffer.

2005-10-07  John Sullivan  <john@wjsullivan.net>
